@startuml

title __ADAPTER's Class Diagram__\n

  namespace com.yyzy.constellation {
    namespace weather.adapter {
      class com.yyzy.constellation.weather.adapter.CityFragmentPagerAdapter {
          ~ childCount : int
          - fragmentList : List<Fragment>
          + CityFragmentPagerAdapter()
          + getCount()
          + getItem()
          + getItemPosition()
          + notifyDataSetChanged()
      }
    }
  }
  

  namespace com.yyzy.constellation {
    namespace weather.adapter {
      class com.yyzy.constellation.weather.adapter.CityManagerAdapter {
          - context : Context
          - mData : List<DatabaseEntity>
          + CityManagerAdapter()
          + getCount()
          + getItem()
          + getItemId()
          + getView()
      }
    }
  }
  

  namespace com.yyzy.constellation {
    namespace weather.adapter {
      class com.yyzy.constellation.weather.adapter.CityManagerAdapter.ViewHolder {
          ~ tvCity : TextView
          ~ tvCondition : TextView
          ~ tvTemp : TextView
          ~ tvTempRange : TextView
          ~ tvWind : TextView
          + ViewHolder()
      }
    }
  }
  

  namespace com.yyzy.constellation {
    namespace weather.adapter {
      class com.yyzy.constellation.weather.adapter.DeleteCityAdapter {
          - context : Context
          - deleteCity : List<String>
          - mData : List<String>
          + DeleteCityAdapter()
          + getCount()
          + getItem()
          + getItemId()
          + getView()
      }
    }
  }
  

  namespace com.yyzy.constellation {
    namespace weather.adapter {
      class com.yyzy.constellation.weather.adapter.DeleteCityAdapter.ViewHolder {
          ~ iv : ImageView
          ~ tv : TextView
          + ViewHolder()
      }
    }
  }
  

  com.yyzy.constellation.weather.adapter.CityFragmentPagerAdapter -up-|> androidx.fragment.app.FragmentStatePagerAdapter
  com.yyzy.constellation.weather.adapter.CityManagerAdapter -up-|> android.widget.BaseAdapter
  com.yyzy.constellation.weather.adapter.CityManagerAdapter +-down- com.yyzy.constellation.weather.adapter.CityManagerAdapter.ViewHolder
  com.yyzy.constellation.weather.adapter.DeleteCityAdapter -up-|> android.widget.BaseAdapter
  com.yyzy.constellation.weather.adapter.DeleteCityAdapter +-down- com.yyzy.constellation.weather.adapter.DeleteCityAdapter.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
